--- a/index.html
+++ b/index.html
@@ -265,17 +265,19 @@ If you have any questions about this project or the material we have covered, pl
                     document.getElementById("secretWord").textContent = hiddenLetters;
                     document.getElementById("remaining").textContent = guesses;
                     document.getElementById("wins").textContent = wins;
+
             }
 
             function incorrectGuess(userGuess) {
                 if (guesses == 0) {
                     document.getElementById("game").textContent = "Game Over! Click refresh to try again.";
                 } else {
+                    guesses--;
                     document.getElementById("remaining").textContent = guesses;
                     incorrect.push(userGuess);
                     document.getElementById("lettersGuessed").textContent = incorrect;
-
-                    console.log(incorrect);
+                    validGuesses.splice(validGuesses.indexOf(userGuess), 1)
+                    console.log(validGuesses);
                 }
             }
 
@@ -289,8 +291,8 @@ If you have any questions about this project or the material we have covered, pl
                 if (letters.indexOf(userGuess) != -1) {
                     // * As the user guesses the correct letters, reveal them: `m a d o _  _ a`. 
                     console.log(letters);
-                } else {
-                    guesses--;
+                } else if (validGuesses.indexOf(userGuess) != -1) {
+                    // guesses--;
                     // if (guesses == 0) {
                         incorrectGuess(userGuess);
                             //     document.getElementById("game").textContent = "Game Over! Click refresh to try again.";
