Minimal styling added along with alerts to let the player know that they completely guessed the previous word.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Word Guess Game</title>
-        <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <script src="assets/javascript/game.js"></script>
 
         <div id="game">
+            <img src="assets/images/wordoftheday.jpg"/>
             <h1>It's Time For Korben To Say The Word Of The Day</h1>
             <h2 id="begin">Press a letter to start with your first guess</h2>
             <h3>Wins</h3>
@@ -25,8 +26,8 @@
 
         </div>
 
-        
-        <script type="text/javascript" src="/assets/javascript/game.js"></script>
+        <script src="assets/javascript/game.js"></script>
+
     </body>
 
 
