The game now displays a picture associated with the previous word on page for the next round.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
 
         <div id="game">
-            <img src="assets/images/wordoftheday.jpg"/>
+            <img id = "dispImg" src="assets/images/wordoftheday.jpg"/>
             <h1>It's Time For Korben To Say The Word Of The Day</h1>
             <h2 id="begin">Press a letter to start with your first guess</h2>
             <h3>Wins</h3>
