The game now plays one song when it first starts, and a different sound whenever the player wins a round. Yes, it is annoying.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <h4 id="remaining"></h4>
             <h3>Letters Already Guessed:</h3>
             <h4 id="lettersGuessed"></h4>
+            <audio id="myAudio">
+                    <source src="assets/sounds/mission.mp3" type="audio/mpeg">
+                  </audio>
 
         </div>
 
